--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,2 +1,2 @@
-Redirect  t1-git-blog.html  "http://imikie.github.io/blog/axure%20blog%20proto/home.html"
+Redirect  t1-git-blog.html  http://imikie.github.io/blog/axure%20blog%20proto/home.html
 
